# opioid-2023-group-8-final-opioid

./: .gitattributes  Deaths_cleaning_main.ipynb  Dosage_with_CountyCode.ipynb  README.md  dask.py  dask_ex6
00_Source_Data/: US_Pop_2010_2020.txt
10_Code/: 01_Dosage.py  01_DosageWithControl.py  03_Population_Cleaning.py  04_Dosage_with_CountyCode.ipynb  Data_Merging.ipynb  DiffFlorida.py  DiffWashington.py  Dosage.py  DosageWithControl.py  ParquetOrganize.ipynb  ParsetoParquet.ipynb  Population_Cleaning.ipynb  chunking.ipynb  controlStates.py  death_clean.py  dos_data_codes.csv  fl_death_plot.ipynb  fl_diff_pre.py  monthly_dosage.py  pop_data_codes.csv  state_death_clean_jiechen.ipynb  tx_death_plot.ipynb  tx_diff_pre.py  wa_death_plot.ipynb  wa_diff_pre.py
20_Intermediate_Files/: AllDosage.parquet  Data_Tracker.xlsx  Deaths.csv  Dosage.parquet  DosageWithControl.parquet  Dosage_FULL.parquet  Dosage_Texas.parquet  Dosage_with_CountyCode.csv  Florida_Merged.csv  PDS_Opioid_Group8_Final.qmd  Texas_Merged.csv  Washington_Merged.csv
40_Docs/: PDSDraftReport.qmd  PDSFinal.ipynb
OneDrive/Desktop/CloudComputing/mini_project2/: Readme.md
OneDrive/Desktop/CloudComputing/mini_project2/week5_lambda/: Cargo.toml
OneDrive/Desktop/CloudComputing/mini_project2/week5_lambda/src/: main.rs
