[package]
name = "ManagerWithLog"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.10.0"
tokio = { version = "1", features = ["macros"] }
lambda_runtime = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
aws-sdk-dynamodb = "0.21.0"
aws-config = "0.51.0"

tracing-subscriber = "0.3.18"
tracing = "0.1.40"
